Added headlines toimages on FL case study

--- a/floodlight-ms.html
+++ b/floodlight-ms.html
@@ -169,6 +169,7 @@
       </figure>
       <h4 class="updating-phase-1-headline">Updates to Phase 1 in paralell with work on Phase 2</h4>
       <p class="updating-phase-1">The team was asked to streamline the live microsite In parallel with the design of the full site, Highlighting the key function of allowing healthcare providers who have already adopted the tool, to access the provider portal,  eliminating the patient directed content and removing the contact form. </p>
+      <h4 class="phase-1-image-headline">Final Adjustments to the Phase 1 Microsite</h4>
       <figure class="phase-1-update">
         <img class="phase-1-update-image" src="images/phase-1-update.png" alt="Floodlight MS Phase-1 Update"></img>
         <figcaption> My team's approach to consolidating content on the microsite</figcaption>
@@ -296,17 +297,20 @@
           </li>
         <li><p>Employ symbols to update recurring components at one time.</p></li>
       </ul>
+      <h4 class="workspace-image-title">An Organized Workspace</h4>
       <figure class="floodlight-wireframe-sketch-workspace">
         <img class="floodlight-wireframe-sketch-workspace-image" src="floodlight-images/floodlight-wireframe-sketch-workspace.png" alt="Floodlight wireframe sketch workspace"></img>
         <figcaption>An organized sketch workspacee</figcaption>
       </figure>
+      <h4 class="labeling-image-title">Consistent Layer Names</h4>
       <figure class="floodlight-consistent-labeling">
         <img class="floodlight-consistent-labeling-image" src="floodlight-images/floodlight-consistent-labeling.png" alt="Consistent labeling of elements"></img>
         <figcaption>Clear and consistent element labeling</figcaption>
       </figure>
+      <h4 class="symbols-image-title">Using Symbols for Efficiency</h4>
       <figure class="floodlight-sketch-symbols">
         <img class="floodlight-sketch-symbols-image" src="floodlight-images/floodlight-sketch-symbols.png" alt="Sketch symbols"></img>
-        <figcaption>Symbols are used to minimize reetitive uopdates</figcaption>
+        <figcaption>Symbols are used to minimize repetitive updates</figcaption>
       </figure>
 
       </section>
@@ -323,6 +327,7 @@
       </p>
       <h3 class="benefits-to-creative-design-headline">Benefits to Creative Design</h3>
       <p class="benefits-to-creative-design-intro">By eliminating the shift from Sketch wireframes to creative layout in Photoshop, we reduced the opportunities for human error and duplicative work. Sketch symbols eliminated the need to make repetitive updates across many layer comps. We shaved days off of our timeline and got our project approved through the client’s promotional reviews committee and handed off to the client’s development team on time.</p>
+      <h4 class="creative-layout-image-set-title">Expedited Creative Layouts Still Consistent with Wires</h4>
       <figure class="creative-layout-homepage">
         <img class="creative-layout-homepage-image" src="floodlight-images/creative-layout-homepage.png" alt="Floodlight MS Creative Layout"></img>
         <figcaption> Creative layout of homepage</figcaption>
@@ -386,26 +391,29 @@
           </ul>
         </li>
       </ul>
+      <h4 class="func-spec-image-title">Specifications Provided for the HCP Page</h4>
       <figure class="functional-specification-fig">
         <img class="func-spec-screen-shot-image" src="floodlight-images/func-spec-screenshot-image.png" alt="Floodlight MS Creative Layout"></img>
         <figcaption>New functional specifications prepared for handoff</figcaption>
       </figure>
-      <p class="handoff-intro">The functional specifications and design files were provided to the cleint’s development team. Sketch design files were handed off to Roche IT via both Zeplin and Sketch Cloud. Both tools allowed for the development team to  easily see exact measurements of components, spaces between them, color hex and RGBA codes and download assets.</p>
-      <figure class="zeplin-1">
+      <p class="handoff-intro">The functional specifications and design files were provided to the client’s development team. Sketch design files were handed off to Roche IT via both Zeplin and Sketch Cloud. Both tools allowed for the development team to  easily see exact measurements of components, spaces between them, color hex and RGBA codes and download assets.</p>
+      <!-- <figure class="zeplin-1">
         <img class="zeplin-1-image" src="floodlight-images/zeplin-1-image.png" alt="Floodlight MS Creative Layout"></img>
         <figcaption>Exporting screens to Zeplin</figcaption>
       </figure>
       <figure class="zeplin-2">
         <img class="zeplin-2-image" src="floodlight-images/zeplin-2-image.png" alt="Floodlight MS Creative Layout"></img>
         <figcaption>Exporting screens to Zeplin</figcaption>
-      </figure>
+      </figure> -->
+      <h4 class="zeplin-3-image-title">Layouts Exported to Zeplin for Efficient Handoff</h4>
       <figure class="zeplin-3">
         <img class="zeplin-3-image" src="floodlight-images/zeplin-3-image.png" alt="Floodlight MS Creative Layout"></img>
         <figcaption>Exporting screens to Zeplin</figcaption>
       </figure>
       <h3 class="user-acceptance-testing">User Acceptance Testing</h3>
-      <p class="user-acceptance-testing-intro">During user acceptance testing (UAT) review of the staging environment, we navigated functionally challenges such as ensuring anchor links opened tabs appropriately and that videos showed the correct pre-play preview image and that GIFs played automatically for only 5 seconds or less,  according to accessibility guidelines. After several rounds of UAT review, the site was approved and went live on 7/28/21 at
+      <p class="user-acceptance-testing-intro">During user acceptance testing (UAT) review of the staging environment, we navigated functionally challenges such as ensuring anchor links opened tabs appropriately and that videos showed the correct pre-play preview image and that GIFs played automatically for only 5 seconds or less,  according to accessibility guidelines. After several rounds of UAT review, the site was approved and went live at
         <a href="https://www.floodlightms.com">floodlightms.com</a></p>
+      <h4 class="final-layouts-image-title">Approved Designs Ready for Launch</h4>
       <figure class="final-homepage-layout">
         <img class="homepage-layout-image" src="floodlight-images/homepage-layout-image.png" alt="Floodlight MS Creative Layout"></img>
         <figcaption>Final homepage after UAT</figcaption>
