Updated FL case study media queries

--- a/floodlight-ms.html
+++ b/floodlight-ms.html
@@ -199,8 +199,6 @@
           <li><p>As a patient/caregiver, I want to access resources, so that I can review additional documentation for the application.</p></li>
           <li><p>As a patient/caregiver, I want to access FAQs, so that I can find answers to common questions and avoid needing to reach out to support.</p></li>
           <li><p>As a patient/caregiver I want to review the intended use statement to clarify any ambiguity on what the app’s intended use it.</p></li>
-          <li><p></p></li>
-          <li><p></p></li>
         </ul>
       <h4 class="hcp-user-stories-list-title">Health care provider user stories included:</h4>
       <ul class="hcp-user-stories-list">
@@ -234,7 +232,7 @@
             <tr class="">
               <td class="content-strategy-summary-table-data-column1"><p>Patient section</p>
               </td>
-              <td class="content-strategy-summary-table-data-column2"><p> ⟶ Features + Customer Support</p>
+              <td class="content-strategy-summary-table-data-column2"><p> ⟶ Features & Support</p>
               </td>
             </tr>
             <tr>
