--- a/Index-2.0.html
+++ b/Index-2.0.html
@@ -106,31 +106,31 @@
       <div class="additional-work">
 
         <div class="card1">
-          <img class="card-project-image" src="images/nuplazid-homepage-screenshot.png" alt="Floodlight MS homepage screenshot" width="233px" height="133.65px"></img>
+          <img class="card-project-image" src="intent_partners_images/intent_partners_thumbnail.png" alt="Intent Partners homepage screenshot" width="233px" height="133.65px"></img>
           <h6 class="card-eyebrow-text">Non-profit | Community consulting</h6>
           <h5 class="card-project-title">Intent Partners responsive web experience redesign </h5>
-          <button class="card-see-the-full-case-study">See the full case study</button>
+          <button onclick="window.location.href = 'intentpartners.html';">See the full case study</button>
         </div>
 
         <div class="card2">
-          <img class="card-project-image" src="images/nuplazid-homepage-screenshot.png" alt="Floodlight MS homepage screenshot" width="233px" height="133.65px"></img>
+          <img class="card-project-image" src="images/verve-thumbnail.png" alt="Verve App homepage screenshot" width="233px" height="133.65px"></img>
           <h6 class="card-eyebrow-text">Wellness | Healthy lifestyle management</h6>
           <h5 class="card-project-title">Verve ios app experience design </h5>
-          <button class="card-see-the-full-case-study">See the full case study</button>
+          <button onclick="window.location.href = 'verve.html';">See the full case study</button>
         </div>
 
         <div class="card3">
           <img class="card-project-image" src="images/nuplazid-homepage-screenshot.png" alt="Floodlight MS homepage screenshot" width="233px" height="133.65px"></img>
           <h6 class="card-eyebrow-text">Pharmaceutical | Parkinsons-disease psychosis</h6>
           <h5 class="card-project-title">NUPLAZID healthcare provider responsive web experience redesign</h5>
-          <button class="card-see-the-full-case-study">Coming soon</button>
+          <button>Coming soon</button>
         </div>
 
         <div class="card4">
           <img class="card-project-image" src="images/nih-homepage-screenshot.png" alt="Floodlight MS homepage screenshot" width="233px" height="133.65px"></img>
           <h6 class="card-eyebrow-text">Life sciences | Technology database</h6>
           <h5 class="card-project-title">NIH Office of Technology Transfer responsive web experience design</h5>
-          <button class="card-see-the-full-case-study">Coming soon</button>
+          <button>Coming soon</button>
         </div>
 
         <!-- <div class="card5">
