Updated homepage link to about page

--- a/Index-2.0.html
+++ b/Index-2.0.html
@@ -151,7 +151,7 @@
     <section class="about">
       <h2 class=about-headline>About me</h2>
       <p class="about-copy">Hi, I’m Jessica Blanchard, senior UX designer, design mentor and educator. I’m passionate about accessible solutions that drive conversions. My experience spans, healthcare, fintech, non-profit, goverment, and self care in responsive web and mobile applications.</p>
-      <button class="about-button">Read more</button>
+      <button onclick="window.location.href = 'about-2.0.html';">Read more</button>
     </section>
 
     <footer class="footer">
