Uodated FL case study copy and restored broken hamburger nav link

--- a/floodlight-ms.html
+++ b/floodlight-ms.html
@@ -324,8 +324,8 @@
       <p class="revisions-for-accessibility-intro">Every project needs to be designed with accessibility in mind, so I also provided extensive consultation on how to adhere to the WCAG 2.1 AA standard for accessibility. Color contrast proved challenging to maneuver because, as is often the case, brand colors were approved by the client before our engagement and limited opportunities to create high contrast without close consideration. We also made several revisions to ensure that more obscure   guidelines were adhered to, such as the need to ensure that videos and animations of 5 seconds or more have a way to be paused, stopped or hidden.
       </p>
       <h3 class="benefits-to-creative-design-headline">Benefits to Creative Design</h3>
-      <p class="benefits-to-creative-design-intro">By eliminating the shift from Sketch wireframes to creative layout in Photoshop, we reduced the opportunities for human error and duplicative work. Sketch symbols eliminated the need to make repetitive updates across many layer comps. We shaved days off of our timeline and got our project approved through the client’s promotional reviews committee and handed off to the client’s development team on time.</p>
-      <h4 class="creative-layout-image-set-title">Expedited Creative Layouts Still Consistent with Wires</h4>
+      <p class="benefits-to-creative-design-intro">We were able to seamlesssly work through modifications for accessibility,  continued client changes and new requests after creative design began without a delay to our timeline because our modular approach to content sections, organized workspace and collaboration in one file allowed us to work with efficient unity.</p>
+      <h4 class="creative-layout-image-set-title">Creative Layouts During Continued Collaboration</h4>
       <figure class="creative-layout-homepage">
         <img class="creative-layout-homepage-image" src="floodlight-images/creative-layout-homepage.png" alt="Floodlight MS Creative Layout"></img>
         <figcaption> Creative layout of homepage</figcaption>
@@ -410,7 +410,7 @@
       </figure>
       <h3 class="user-acceptance-testing">User Acceptance Testing</h3>
       <p class="user-acceptance-testing-intro">During user acceptance testing (UAT) review of the staging environment, we navigated functionally challenges such as ensuring anchor links opened tabs appropriately and that videos showed the correct pre-play preview image and that GIFs played automatically for only 5 seconds or less,  according to accessibility guidelines. After several rounds of UAT review, the site was approved and went live at
-        <a href="https://www.floodlightms.com">floodlightms.com</a></p>
+        <a href="https://www.floodlightms.com">floodlightms.com.</a></p>
       <h4 class="final-layouts-image-title">Approved Designs Ready for Launch</h4>
       <figure class="final-homepage-layout">
         <img class="homepage-layout-image" src="floodlight-images/homepage-layout-image.png" alt="Floodlight MS Creative Layout"></img>
@@ -425,7 +425,7 @@
 
     <section class="key-takeaways">
       <h2 class="key-takeaways-headline">Key takeaways</h2>
-      <p class = "key-takeaways-intro">Within 24 hours of receiving the Sketch design file containing wireframes, the art direct team was able to return a full first draft of the layout. Despite being new to working Sketch, proper file preparation and educational resources allowed the team a quick turnaround.</p>
+      <p class = "key-takeaways-intro">By eliminating the shift from Sketch wireframes to creative layout in Photoshop, we reduced the opportunities for human error and duplicative work. Ultimately we obtained project approval through the client’s promotional reviews committee, facilitated a successful implementation process and handed off to the client’s development team earlier than anticipated as a result of our workflow, allowing this brand to advertise their app sooner and increasing opportunity to build value.</p>
       <h3 class="tips">Tips for a smooth handoff between UX and Creative</h3>
       <p class="tips-intro">Prepare your sketch file thoughtfully</p>
       <ul class="tips-list">
