Updated styling of 2021 about and contact pages as well as copy for FL

--- a/Index-2.0.html
+++ b/Index-2.0.html
@@ -95,7 +95,7 @@
         <img class="featured-project-image" src="images/floodlightms-homepage-atf-screenshot.png" alt="Floodlight MS homepage screenshot"></img>
         <h6 class="eyebrow-text">Pharmaceutical | Multiple Sclerosis</h6>
         <h5 class="featured-project-title">Floodlight MS responsive web design</h5>
-        <p class="featured-project-description">Floodlight MS is an iOS and Android app that allows MS patients to engage in simple daily activities to objectively monitor symptoms and disease progression, while sharing the details with their care team. <br><br>My team designed an accessible website for the app, building upon the look and feel of an earlier microsite, while incorporating an expanded content strategy and applying a mobile first approach. </p>
+        <p class="featured-project-description">Floodlight MS is an iOS and Android app that allows MS patients to engage in simple daily activities to objectively monitor symptoms and disease progression, while sharing the details with their care team. <br><br>My team designed an accessible website for the app, building upon the look and feel of an earlier microsite, while incorporating an expanded content strategy and applying a mobile first approach.</br></br>Ultimately we obtained project approval through the client’s promotional reviews committee, facilitated a successful implementation process and handed off to the client’s development team earlier than anticipated as a result of our workflow, allowing this brand to advertise their app sooner and increasing opportunity to build value. </p>
         <!-- <button class="see-the-full-case-study">See the full case study</button> -->
         <button onclick="window.location.href = 'floodlight-ms.html';">See the full case study</button>
 
