--- a/contact-2.0.html
+++ b/contact-2.0.html
@@ -16,7 +16,7 @@
     <link rel=stylesheet href="styles/reset.css">
     <!-- Custom Styles -->
     <link rel="stylesheet" href="styles/portfolio-2021-global-components.css">
-    <link rel="stylesheet" href="styles/portfolio-2021-homepage-specific.css">
+    <link rel="stylesheet" href="styles/portfolio-2021-contact-2.0-specific.css">
     <link rel="shortcut icon" type="image/x-icon" href="jess-logo-blue.ico">
 
     <!-- Mobile nav settings to close on clicking anchor link -->
@@ -75,24 +75,18 @@
 
 
 
-      <section class="contact-title">
-          <h1>Let's Connect!</h1>
+      <section class="hero">
+          <h1 class="hero-headline">Let's Connect!</h1>
+          <p class="hero-copy"> Want to discuss an upcoming project, learn more about my work or chat about inclusive design over coffee? Get in contact!</p>
+          <div class="contact-page-details">
+            <form method="POST" action="https://formspree.io/hello@jessblanchard.design">
+              <input type="email" name="email" placeholder="Your email">
+              <textarea name="message" placeholder="Your Message"></textarea>
+              <button type="submit">Send</button>
+            </form>
+          </div>
         </section>
 
-      <section class="contact-page-text">
-        <!-- <h1>About Me</h1> -->
-
-        <p> Want to discuss an upcoming project, learn more about my work or chat about inclusive design over coffee? Get in contact!
-          </p>
-
-        <div class="contact-page-details">
-          <form method="POST" action="https://formspree.io/hello@jessblanchard.design">
-            <input type="email" name="email" placeholder="Your email">
-            <textarea name="message" placeholder="Your Message"></textarea>
-            <button type="submit">Send</button>
-          </form>
-        </div>
-      </section>
 
       <footer class="footer">
         <p class = "footer-email">hello@jessblanchard.design</p>
