updated intent case study for 2021 styling

--- a/verve-2.0.html
+++ b/verve-2.0.html
@@ -18,6 +18,7 @@
     <!-- Custom Styles -->
     <link rel="stylesheet" href="styles/portfolio-2021-global-components.css">
     <link rel="stylesheet" href="styles/portfolio-2021-verve-2.0-specific.css">
+    <link rel="shortcut icon" type="image/x-icon" href="jess-logo-blue.ico">
   </head>
 
   <body class="verve-case-study">
