verified links and swapped index pages

--- a/contact-2.0.html
+++ b/contact-2.0.html
@@ -91,7 +91,7 @@
       <footer class="footer">
         <p class = "footer-email">hello@jessblanchard.design</p>
         <div class="footer-links">
-            <a href="https://www.linkedin.com/in/jessdesignedit" target="_blank">
+            <a href="https://www.linkedin.com/in/jessblanchard" target="_blank">
               <img src="images/icons/icons8-linkedin-2-500.png" alt="LinkedIn logo">
               </a>
             <a href="https://www.github.com/jessblanchard" target="_blank">
