--- a/intentpartners-2.0.html
+++ b/intentpartners-2.0.html
@@ -79,7 +79,7 @@
 
         <section class="bulletpoints">
             <div class="roles">
-              <h1>Roles</h1>
+              <h3>Roles</h3>
               <ul class="roles-list">
                 <li>
                   <p>User Research</p>
@@ -94,7 +94,7 @@
               </ul>
             </div>
             <div class="deliverables">
-              <h1>Deliverables</h1>
+              <h3>Deliverables</h3>
               <ul class="deliverables-list">
                 <li>
                   <p>Competitive Analysis</p>
@@ -119,7 +119,7 @@
                 </ul>
             </div>
             <div class="tools-used">
-              <h1>Tools Used</h1>
+              <h3>Tools Used</h3>
               <ul class="tools-list">
                 <li>
                   <p>Survey Monkey</p>
@@ -612,7 +612,7 @@
         <footer class="footer">
           <p class = "footer-email">hello@jessblanchard.design</p>
           <div class="footer-links">
-              <a href="https://www.linkedin.com/in/jessdesignedit" target="_blank">
+              <a href="https://www.linkedin.com/in/jessblanchard" target="_blank">
                 <img src="images/icons/icons8-linkedin-2-500.png" alt="LinkedIn logo">
                 </a>
               <a href="https://www.github.com/jessblanchard" target="_blank">
