Modifications to intent case study

--- a/intentpartners-2.0.html
+++ b/intentpartners-2.0.html
@@ -574,8 +574,7 @@
               <li><p>Visit the intent map and search for local concerts. View concert details and read more information.</p></li>
               <li><p>Visit the contact page and write Intent Partners a message.</p></li>
             </ul>
-            <p>My users included David Blanchard, age 34, Pharmacist, of North Plainfield, NJ, an active and experienced web user and Sophia Mckenzie, age 55, Estate Manager, of Brooklyn, NY, an avid browser with limited comfort with electronic devices.</p>
-            <p>Testing indicated that tools would be better named “maps” as it better indicates to less saavy users what to expect.  Results would be better called “case studies” for the same reason. Changing these labels to be more intuitive will make it easier for an inexperienced user to navigate the site.</p>
+            <p>My users included David Blanchard, age 34, Pharmacist, of North Plainfield, NJ, an active and experienced web user and Sophia Mckenzie, age 55, Estate Manager, of Brooklyn, NY, an avid browser with limited comfort with electronic devices.</br></br>Testing indicated that tools would be better named “maps” as it better indicates to less saavy users what to expect.  Results would be better called “case studies” for the same reason. Changing these labels to be more intuitive will make it easier for an inexperienced user to navigate the site.</p>
             <div class="intent-hifi-group">
               <img class="intent-hifi-pic" src="intent_partners_images/hi-fidelity-mockups/round_3/Homepage.png" alt="Landing Page Mockup">
               <img class="intent-hifi-pic" src="intent_partners_images/hi-fidelity-mockups/round_3/intent_map.png" alt="Landing Page Mockup">
