--- a/verve-2.0.html
+++ b/verve-2.0.html
@@ -26,8 +26,8 @@
     <nav class="primary-navigation">
       <a class="logo" href="index.html">
         <img class="navigation-logo" src="images/jess-logo-blue.png" alt="Jess logo" width="62" style="padding:0px;"></a>
-      <a class="nav-work" href="Index-2.0.html#work">About my work</a>
-      <a class="nav-about" href="Index-2.0.html#about">About me</a>
+      <a class="nav-work" href="index.html#work">About my work</a>
+      <a class="nav-about" href="index.html#about">About me</a>
       <a class="nav-resume" href="documents/jessica_blanchard_resume_02112022.pdf" target="_blank">Download my resume</a>
       <button onclick="window.location.href = 'contact-2.0.html';">Get in contact</button>
       <!-- Original MOBILE NAV -->
